# highlights

./: .gitignore  decisions.md
cluster-toy/: cluster.py  filescan.py  filetype.py  pyproject.toml
example-data/gpses/: .Kootenay_Boundary_Road_Cycling.gpx.swp  Central_Kootenay_Road_Cycling-2.gpx  Central_Kootenay_Road_Cycling-3.gpx  Central_Kootenay_Road_Cycling-4.gpx  Central_Kootenay_Road_Cycling-5.gpx  Central_Kootenay_Road_Cycling.gpx  Kootenay_Boundary_Road_Cycling.gpx
generator/: gen.py  log.md  pyproject.toml
generator/web/: index.html  tl_view.js  trip_config.js
