[project]
name = "generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "black>=25.1.0",
    "exifread>=3.3.1",
    "exiv2>=0.17.3",
    "gpxpy>=1.6.2",
    "lxml>=6.0.0",
    "pymediainfo>=7.0.1",
    "python-magic>=0.4.27",
]
